--- a/test/android_nfc_test.html
+++ b/test/android_nfc_test.html
@@ -10,7 +10,7 @@
   </head>
 <script>
   async function readTag() {
-        consoleLog("Read Tag");
+        consoleLog("Read Tag with serial");
         if ("NDEFReader" in window) {
           const ndef = new NDEFReader();
           try {
