--- a/test/android_nfc_test.html
+++ b/test/android_nfc_test.html
@@ -60,11 +60,7 @@
     </p>
     <pre id="log"></pre>
     <p>
-      <small
-        >Based on the code snippets from
-        <a href="https://w3c.github.io/web-nfc/#examples">specification draft</a
-        >.</small
-      >
+      <small>Based on the code snippets from <a href="https://w3c.github.io/web-nfc/#examples">specification draft</a>.</small>
     </p>
 
   </body>
