--- a/test/mato_club_instructor.html
+++ b/test/mato_club_instructor.html
@@ -98,6 +98,7 @@
         consoleLog ('<p style="color: red;">Необходим ключ доступа!</p>');
         return;
     } else {    
+       consoleLog ('<p>Ключ доступа "${password}"</p>');
       startScaning();
     }
 </script>
