--- a/test/mato_club_instructor.html
+++ b/test/mato_club_instructor.html
@@ -100,7 +100,8 @@
 <div id="log"></div>
   
 <script>
-    const nfcPermissionStatus = checkNFCPermission();
+    //const nfcPermissionStatus = checkNFCPermission();
+    const nfcPermissionStatus = "granted";
     if ("NDEFReader" in window) {
       if (!password) {
         consoleLog ('<p style="color: red;">Необходим ключ доступа!</p>');      
