--- a/test/mato_club_instructor.html
+++ b/test/mato_club_instructor.html
@@ -27,7 +27,7 @@
 
     const password = getKeyParameter();
 
-    async function startScaning() {
+    async function startScanning() {
   
       try {
           const ndef = new NDEFReader();
